# Dexter

./: README.md
dexter_bringup/: CMakeLists.txt  package.xml
dexter_bringup/launch/: real_robot.launch.py  simulated_robot.launch.py
dexter_controller/: CMakeLists.txt  dexter_controller.xml  package.xml
dexter_controller/include/dexter_controller/: dexter_interface.hpp
dexter_controller/launch/: controller.launch.py  slider_controller.launch.py
dexter_controller/src/: dexter_interface.cpp
dexter_cpp_examples/: CMakeLists.txt
dexter_cpp_examples/src/: simple_action_client.cpp  simple_action_server.cpp  simple_moveit_interface.cpp  simple_service_client.cpp  simple_service_server.cpp
dexter_description/: CMakeLists.txt  package.xml
dexter_description/launch/: display.launch.py  gazebo.launch.py
dexter_description/urdf/: dexter.urdf.xacro  dexter_gazebo.xacro  dexter_ros2_control.xacro
dexter_firmware/: CMakeLists.txt  README.md  package.xml
dexter_firmware/firmware/gesture_esp32/: gesture_esp32.ino
dexter_firmware/firmware/robot_control/: robot_control.ino
dexter_gesture/: CMakeLists.txt  README.md  package.xml
dexter_gesture/config/: gesture_config.yaml
dexter_gesture/dexter_gesture/: gesture_receiver.py  motion_smoother.py  udp_test_sender.py
dexter_gesture/launch/: gesture_control.launch.py  gesture_sim.launch.py
dexter_gesture/test/: test_gesture_receiver.py  test_motion_smoother.py
dexter_moveit/: CMakeLists.txt  package.xml
dexter_moveit/config/: dexter.srdf  initial_positions.yaml
dexter_moveit/launch/: moveit.launch.py
dexter_msgs/: CMakeLists.txt  package.xml
dexter_py_examples/: setup.cfg  setup.py
dexter_py_examples/dexter_py_examples/: simple_action_client.py  simple_action_server.py  simple_service_client.py
dexter_py_examples/launch/: simple_moveit_interface.launch.py
dexter_remote/: CMakeLists.txt  package.xml
dexter_remote/dexter_remote/: task_server.py  web_interface.py
dexter_remote/launch/: remote_interface.launch.py
dexter_remote/src/: task_server.cpp
dexter_remote/templates/: index.html
dexter_utils/: CMakeLists.txt  package.xml
dexter_utils/dexter_utils/: angle_conversion.py
dexter_utils/src/: angle_conversion.cpp
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/dexter_bringup/share/dexter_bringup/: local_setup.bash  package.bash  (+7 more)
log/: latest_build
(+310 files in other folders)
