<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dexter_gesture</name>
  <version>0.1.0</version>
  <description>
    Hand gesture control for the Dexter robotic arm.
    Receives IMU orientation data from an ESP32+MPU6050 glove over UDP
    and maps it to joint trajectory commands for the arm and gripper.
  </description>
  <maintainer email="aditya@todo.todo">aditya</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>builtin_interfaces</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>dexter_controller</exec_depend>
  <exec_depend>dexter_description</exec_depend>
  <exec_depend>dexter_moveit</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
